# immo-tools-lib

./: README.md  demo.ipynb  demo.py  noxfile.py  pyproject.toml
immo_tools/: calculator.py  constants.py
tests/immo_tools/: calculator_test.py
