[tool.poetry]
name = "immo-tools-lib"
version = "0.1.3"
description = "calcul des couts de credit immobilier"
license = "MIT"
authors = ["thomas.marquis.dev <thomas.marquis314@gmail.com>"]
packages = [
    {include = "immo_tools"}
]
readme = "README.md"
repository = "https://github.com/thomas-marquis/immo-tools-lib"
homepage = "https://github.com/thomas-marquis/immo-tools-lib"

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
pandas = "^1.0.1"
tabulate = "^0.8.6"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^5.3.5"
coverage = {extras = ["toml"], version = "^5.0.3"}
pytest-cov = "^2.8.1"
nox = "^2019.11.9"

[tool.coverage.paths]
source = ['./', '*/site-packages']

[tool.coverage.run]
branch = true
source = ['immo_tools']

[tool.coverage.report]
show_missing = true
fail_under = 20

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
